--- a/template/css/hb-admin.css
+++ b/template/css/hb-admin.css
@@ -1,5 +1,5 @@
 
-/* Global Styles */
+/* General */
 
 body {
     margin-top: 100px;
@@ -45,7 +45,8 @@ body {
 
 .top-nav>li {
     display: inline-block;
-    float: left;
+    
+
 }
 
 .top-nav>li>a {
@@ -55,13 +56,14 @@ body {
     color: #999;
 }
 
+
 .top-nav>li>a:hover,
 .top-nav>li>a:focus,
 .top-nav>.open>a,
 .top-nav>.open>a:hover,
 .top-nav>.open>a:focus {
     color: #fff;
-    background-color: #0F4C71;
+    background-color: #222;
 }
 
 .top-nav>.open>.dropdown-menu {
@@ -150,8 +152,8 @@ ul.alert-dropdown {
 }
 
 /* Flot Chart Containers */
-
-/* .flot-chart {
+ 
+ .flot-chart {
     display: block;
     height: 400px;
 }
@@ -159,7 +161,7 @@ ul.alert-dropdown {
 .flot-chart-content {
     width: 100%;
     height: 100%;
-} */
+}  
 
 /* Custom Colored Panels */
 
