adds two new pages

--- a/template/addbooks.html
+++ b/template/addbooks.html
@@ -4,7 +4,6 @@
     and fixed Top menu Item
 -->
 
-
 <!-- CSS Frameworks used: Bootstrap, Font-Awesome -->
 <!-- Javascript Frameworks used: Jquery, bootstrap.min.js  -->
 <html lang="en">
@@ -27,9 +26,9 @@
 
 <body>
 
-    <div id="wrapper"> <!-- Wrapper -->
+    <div id="wrapper">
 
-        <!-- Navigations -->
+        <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
            
             <div class="navbar-header">
@@ -57,20 +56,19 @@
                         </li>
                     </ul>
                 </li>
-            </ul> <!-- / top menu items -->
-
+            </ul>
     <!-- SIDE BAR MENU  -->
             
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li class="active"> 
+                    <li> 
                         <a href="dashboard.html"><i class="fa fa-fw fa-book"></i>Library</a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="addbooks.html"><i class="fa fa-fw fa-plus"></i>Add Books</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-table"></i>Manage Books</a>
+                        <a href="managebooks.html"><i class="fa fa-fw fa-table"></i>Manage Books</a>
                     </li>
 
                     <li>
@@ -93,7 +91,6 @@
             <!-- /end .navbar-collapse -->
         </nav>
 
-        <!-- content -->
         <div id="page-wrapper">
 
             <div class="container-fluid">
@@ -105,20 +102,20 @@
                             Library <small>Select your preferred reads.</small>
                         </h1>
                         <form>
-                     <!-- Search box -->               
+                          
                         <ol class="breadcrumb">
                             <li class="active">
                                 <form>
                                     <input type="text" name="search" placeholder="Search...">
                                 </form> 
                             </li>
-                        </ol> <!-- / searchBox -->
+                        </ol>
                     </div>
                 </div>
 
                 <!-- end /.row -->
 
-                <!-- Books arranged in rows-->
+                <!-- BOOKS arranged in rows-->
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
                        
@@ -420,7 +417,7 @@
                         </div>
                     </div>
                 </div>
-<!-- /.row>
+
 
             </div>
             <!-- /.container-fluid -->
