--- a/template/managebooks.html
+++ b/template/managebooks.html
@@ -62,13 +62,13 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li> 
-                        <a href="#"><i class="fa fa-fw fa-book"></i>Library</a>
-                    </li>
-                    <li class="active">
-                        <a href="#"><i class="fa fa-fw fa-plus"></i>Add Books</a>
+                        <a href="dashboard.html"><i class="fa fa-fw fa-book"></i>Library</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-table"></i>Manage Books</a>
+                        <a href="addbooks.html"><i class="fa fa-fw fa-plus"></i>Add Books</a>
+                    </li>
+                    <li class="active">
+                        <a href="managebooks.html"><i class="fa fa-fw fa-table"></i>Manage Books</a>
                     </li>
 
                     <li>
