--- a/template/profile.html
+++ b/template/profile.html
@@ -33,7 +33,7 @@
            
             <div class="navbar-header">
 
-                <a class="navbar-brand" href="#">Admin Dashboard</a>
+                <a class="navbar-brand" href="dashboard.html">Admin Dashboard</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -59,7 +59,7 @@
             </ul>
     <!-- SIDE BAR MENU  -->
             
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <!-- <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li> 
                         <a href="dashboard.html"><i class="fa fa-fw fa-book"></i>Library</a>
@@ -87,9 +87,10 @@
                     </li>
 
                 </ul>
-            </div>
+            </div> -->
             <!-- /end .navbar-collapse -->
         </nav>
+           <!-- /end side bar menu -->
 
         <div id="page-wrapper">
 
@@ -99,24 +100,30 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Add Books <small></small>
+                            Profile
                         </h1>
-                        <form>
-                          <!-- search box -->
-                        <ol class="breadcrumb">
-                            <li class="active">
+                        
+                          
+                        <ol class="breadcrumb" style="text-align: center;">
+                            <h1>
+                            <small><i class="fa fa-fw fa-user"></i>Edit Your Profile</small>
+                            </h1>
+                            <!-- <li class="active">
                                 <form>
                                     <input type="text" name="search" placeholder="Search...">
                                 </form> 
-                            </li>
+                            </li> -->
                         </ol>
                     </div>
+                </div>
+                <div height="500px;" style="padding-bottom: 500px;" id="profile-container">
+                    
                 </div>
 
                 <!-- end /.row -->
 
                 <!-- BOOKS arranged in rows-->
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-lg-3 col-md-6">
                        
                         <div class="panel panel-primary">
@@ -215,9 +222,9 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
  <!-- /.row -->               
-<div class="row">
+<!-- <div class="row">
                     <div class="col-lg-3 col-md-6">
                        
                         <div class="panel panel-primary">
@@ -315,10 +322,10 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
  <!-- /.row -->               
-<div class="row">
+ <!-- <div class="row">
                     <div class="col-lg-3 col-md-6">
                        
                         <div class="panel panel-primary">
@@ -416,10 +423,10 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
-            </div>
+            </div> 
             <!-- /.container-fluid -->
 
         </div>
