--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -43,7 +43,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>Martins Onuoha<b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                            <a href="profile.html"><i class="fa fa-fw fa-user"></i> Profile</a>
                         </li>
                          <li>
                             <a href="#"><i class="fa fa-fw fa-envelope"></i>Notifications</a>
@@ -104,7 +104,7 @@
                         <h1 class="page-header">
                             Library <small>Select your preferred reads.</small>
                         </h1>
-                        <form>
+                       
                      <!-- Search box -->               
                         <ol class="breadcrumb">
                             <li class="active">
