--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -46,7 +46,7 @@
                             <a href="profile.html"><i class="fa fa-fw fa-user"></i> Profile</a>
                         </li>
                          <li>
-                            <a href="#"><i class="fa fa-fw fa-envelope"></i>Notifications</a>
+                            <a href="notifications.html"><i class="fa fa-fw fa-envelope"></i>Notifications</a>
                         </li> 
                          <li>
                             <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
