--- a/template/profile.html
+++ b/template/profile.html
@@ -45,7 +45,7 @@
                             <a href="profile.html"><i class="fa fa-fw fa-user"></i> Profile</a>
                         </li>
                          <li>
-                            <a href="#"><i class="fa fa-fw fa-envelope"></i>Notifications</a>
+                            <a href="notifications.html"><i class="fa fa-fw fa-envelope"></i>Notifications</a>
                         </li> 
                          <li>
                             <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
@@ -59,12 +59,12 @@
             </ul>
     <!-- SIDE BAR MENU  -->
             
-            <!-- <div class="collapse navbar-collapse navbar-ex1-collapse">
+             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li> 
                         <a href="dashboard.html"><i class="fa fa-fw fa-book"></i>Library</a>
                     </li>
-                    <li class="active">
+                    <li>
                         <a href="addbooks.html"><i class="fa fa-fw fa-plus"></i>Add Books</a>
                     </li>
                     <li>
@@ -87,7 +87,7 @@
                     </li>
 
                 </ul>
-            </div> -->
+            </div> 
             <!-- /end .navbar-collapse -->
         </nav>
            <!-- /end side bar menu -->
@@ -99,14 +99,15 @@
                 <!-- Page Heading -->
                 <div class="row">
                     <div class="col-lg-12">
+                        <!-- <center>
                         <h1 class="page-header">
                             Profile
                         </h1>
-                        
-                          
+                        </center>
+                           -->
                         <ol class="breadcrumb" style="text-align: center;">
                             <h1>
-                            <small><i class="fa fa-fw fa-user"></i>Edit Your Profile</small>
+                            <small><i class="fa fa-fw fa-user"></i>Profile</small>
                             </h1>
                             <!-- <li class="active">
                                 <form>
