--- a/template/managebooks.html
+++ b/template/managebooks.html
@@ -130,7 +130,7 @@
                                     <div class="col-xs-9 text-right">
                                         
                                         <div class="huge">01</div>
-                                        <div class="medium">Things Fall apart</div>
+                                        <div style="font-size: 17px;">Things Fall apart</div>
                                         <div class="small"><i>Chinua Achebe</i></div>
                                     </div> 
                                 </div>
