--- a/template/addbooks.html
+++ b/template/addbooks.html
@@ -100,7 +100,7 @@
                     <div class="col-lg-12">
                         <center>
                         <h1 class="page-header">
-                            Add Books <small></small>
+                            Add Books 
                         </h1>
                         </center>
 
