config/ folder available to fix Travis Buil error

--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -12,7 +12,7 @@
 <head>
 
     <meta charset="utf-8">
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="library management">
     <meta name="author" content="hellobooks">
@@ -32,7 +32,7 @@
 
         <!-- Navigations -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-           
+
             <div class="navbar-header">
 
                 <a class="navbar-brand" href="#menu-toggle" id="menu-toggle">Menu</a>
@@ -48,30 +48,30 @@
                         </li>
                          <li>
                             <a href="notifications.html"><i class="fa fa-fw fa-envelope"></i>Notifications</a>
-                        </li> 
+                        </li>
                          <li>
-                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-                        </li> 
+                            <a href="settings.html"><i class="fa fa-fw fa-gear"></i> Settings</a>
+                        </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="index.html"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                         </li>
                     </ul>
                 </li>
             </ul> <!-- / top menu items -->
 
     <!-- SIDE BAR MENU  -->
-            
+
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li class="active"> 
+                    <li class="active">
                         <a href="dashboard.html"><i class="fa fa-fw fa-book"></i>Library</a>
                     </li>
                     <li>
                         <a href="addbooks.html"><i class="fa fa-fw fa-plus"></i>Add Books</a>
                     </li>
                     <li>
-                        <a href="managebooks.html"><i class="fa fa-fw fa-table"></i>Manage Books</a>
+                        <a href="deletebooks.html"><i class="fa fa-fw fa-table"></i>Manage Books</a>
                     </li>
 
                     <li>
@@ -107,18 +107,18 @@
                             Library <small>Select your preferred reads.</small>
                         </h1>
                         </center>
-                       
-                     <!-- Search box -->               
+
+                     <!-- Search box -->
                         <ol class="breadcrumb">
                             <li class="active">
                                 <form>
                                     <input type="text" name="search" placeholder="Search...">
-                                </form> 
+                                </form>
                             </li>
                         </ol> <!-- / searchBox -->
                     </div>
                 </div>
-           
+
 
        <!-- Projects Row -->
         <div class="row">
@@ -246,30 +246,30 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
         </div>
-                   
 
-                
+
+
 
                 <!-- end /.row -->
 
                 <!-- Books arranged in rows-->
                 <!-- <div class="row">
                     <div class="col-lg-3 col-md-6">
-                       
+
                         <div class="panel panel-primary">
                             <div class="panel-heading">
                                 <div class="row">
-                                    
+
                                     <div class="col-xs-3">
-                                        
-                                    
+
+
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        
+
                                         <div class="huge">01</div>
                                         <div class="medium">Things Fall apart</div>
                                         <div class="small"><i>Chinua Achebe</i></div>
-                                    </div> 
+                                    </div>
                                 </div>
                             </div>
 
@@ -287,7 +287,7 @@
                             <div class="panel-heading">
                                 <div class="row">
                                     <div class="col-xs-3">
-                                        
+
                                     </div>
                                     <div class="col-xs-9 text-right">
                                         <div class="huge">02</div>
@@ -310,13 +310,13 @@
                             <div class="panel-heading">
                                 <div class="row">
                                     <div class="col-xs-3">
-                                       
+
                                     </div>
                                     <div class="col-xs-9 text-right">
                                         <div class="huge">03</div>
                                         <div class="medium">The Famished Road</div>
                                         <div class="small"><i>Ben Okri</i></div>
-                                        
+
                                     </div>
                                 </div>
                             </div>
@@ -334,7 +334,7 @@
                             <div class="panel-heading">
                                 <div class="row">
                                     <div class="col-xs-3">
-                                     
+
                                     </div>
                                     <div class="col-xs-9 text-right">
                                         <div class="huge">04</div>
@@ -353,10 +353,10 @@
                         </div>
                     </div>
                 </div> -->
- <!-- /.row -->               
+ <!-- /.row -->
 
 
- <!-- /.row -->               
+ <!-- /.row -->
 
 <!-- /.row>
 
@@ -364,7 +364,7 @@
             <!-- /.container-fluid -->
 
         </div>
-        
+
 <!-- /#page-wrapper -->
     </div>
 
