--- a/template/settings.html
+++ b/template/settings.html
@@ -45,14 +45,14 @@
                             <a href="profile.html"><i class="fa fa-fw fa-user"></i> Profile</a>
                         </li>
                          <li>
-                            <a href="notifications.html"><i class="fa fa-fw fa-envelope"></i>Notifications</a>
+                            <a href="notifications.html"><i class="fa fa-fw fa-envelope"></i>Settings</a>
                         </li>
                          <li>
                             <a href="settings.html"><i class="fa fa-fw fa-gear"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="index.html"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                         </li>
                     </ul>
                 </li>
@@ -101,20 +101,18 @@
                     <div class="col-lg-12">
                         <!-- <center>
                         <h1 class="page-header">
-                            Profile
+                            Notifications
                         </h1>
-                        </center>
-                           -->
-                        <ol class="breadcrumb" style="text-align: center;">
+                        </center> -->
+
+                         <ol class="breadcrumb" style="text-align: center;">
                             <h1>
-                            <small><i class="fa fa-fw fa-user"></i>Profile</small>
+                            <small><i class="fa fa-fw fa-envelope"></i>Notifications</small>
                             </h1>
-                            <!-- <li class="active">
-                                <form>
-                                    <input type="text" name="search" placeholder="Search...">
-                                </form>
-                            </li> -->
-                        </ol>
+                          <li class="active">
+
+                            </li>
+                         </ol>
                     </div>
                 </div>
                 <div height="500px;" style="padding-bottom: 500px;" id="profile-container">
